--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,19 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # 2. Install AWS CLI
+      # 2. Install AWS CLI with update flag to handle existing installations
       - name: Set up AWS CLI
         run: |
+          # Download AWS CLI
           curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
-          sudo ./aws/install
+          
+          # Remove any previous installations of AWS CLI
+          sudo rm -rf /usr/local/aws
+          sudo rm -rf /usr/local/bin/aws
+          
+          # Install AWS CLI with the --update flag to ensure the latest version
+          sudo ./aws/install --update
 
       # 3. Configure AWS CLI with secrets stored in GitHub
       - name: Configure AWS CLI
