--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,16 @@ jobs:
           sudo rm -rf /usr/local/bin/aws
           sudo ./aws/install --update
 
-      # 3. Configure AWS CLI with secrets stored in GitHub
-      - name: Configure AWS CLI
+      # 3. Verify the secrets and configure AWS CLI
+      - name: Verify AWS secrets and configure AWS CLI
         run: |
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          # Debugging: print the secret values to ensure they're being picked up correctly
+          echo "AWS Access Key ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
+          echo "AWS Secret Access Key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+
+          # Configure AWS CLI with the provided secrets
+          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
+          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
           aws configure set default.region us-east-1
 
       # 4. Launch EC2 Instance (Change the AMI ID, instance type, etc.)
