--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Set up VM and Install Tailscale
+name: Setup Windows VM and Install Tailscale
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      # 2. Install AWS CLI with update flag to handle existing installations
+      # 2. Install AWS CLI
       - name: Set up AWS CLI
         run: |
           curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
@@ -23,23 +23,18 @@ jobs:
           sudo rm -rf /usr/local/bin/aws
           sudo ./aws/install --update
 
-      # 3. Verify the secrets and configure AWS CLI
-      - name: Verify AWS secrets and configure AWS CLI
+      # 3. Configure AWS CLI with secrets
+      - name: Configure AWS CLI
         run: |
-          # Debugging: print the secret values to ensure they're being picked up correctly
-          echo "AWS Access Key ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
-          echo "AWS Secret Access Key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-
-          # Configure AWS CLI with the provided secrets
-          aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
-          aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region us-east-1
 
-      # 4. Launch EC2 Instance (Change the AMI ID, instance type, etc.)
-      - name: Launch EC2 Instance
+      # 4. Launch Windows EC2 Instance
+      - name: Launch Windows EC2 Instance
         id: launch_instance
         run: |
-          INSTANCE_ID=$(aws ec2 run-instances --image-id ami-xxxxxxxx --count 1 --instance-type t2.micro --key-name my-key-pair --security-group-ids sg-xxxxxxxx --subnet-id subnet-xxxxxxxx --query 'Instances[0].InstanceId' --output text)
+          INSTANCE_ID=$(aws ec2 run-instances --image-id ami-xxxxxxxx --count 1 --instance-type t2.micro --key-name my-key-pair --security-group-ids sg-xxxxxxxx --subnet-id subnet-xxxxxxxx --user-data file://setup-windows.sh --query 'Instances[0].InstanceId' --output text)
           echo "Instance ID: $INSTANCE_ID"
           echo "::set-output name=instance_id::$INSTANCE_ID"
 
@@ -48,11 +43,16 @@ jobs:
         run: |
           aws ec2 wait instance-running --instance-ids ${{ steps.launch_instance.outputs.instance_id }}
 
-      # 6. Install Tailscale on EC2 Instance via SSH
-      - name: Install Tailscale on EC2 Instance
+      # 6. Install Tailscale on Windows EC2 Instance (via RDP)
+      - name: Install Tailscale on Windows EC2 Instance
         run: |
-          sleep 30
+          # Wait for the RDP to be available
+          sleep 60
           EC2_PUBLIC_IP=$(aws ec2 describe-instances --instance-ids ${{ steps.launch_instance.outputs.instance_id }} --query 'Reservations[0].Instances[0].PublicIpAddress' --output text)
+
+          # Use RDP for installation of Tailscale (ensure RDP is configured)
+          # For this example, you would typically use an RDP tool or WinRM to automate installation
+          # Here, we're just simulating the installation of Tailscale via SSH as an example.
           ssh -o StrictHostKeyChecking=no -i "my-key-pair.pem" ubuntu@$EC2_PUBLIC_IP << 'EOF'
             curl -fsSL https://tailscale.com/install.sh | sh
             sudo systemctl enable --now tailscaled
