--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region us-east-1
 
-      # 4. Install Tailscale from GitHub Releases
+      # 4. Install Tailscale using curl from GitHub Releases
       - name: Install Tailscale
         run: |
           $installerPath = "tailscale_installer.msi"
@@ -45,9 +45,9 @@ jobs:
           # GitHub Releases direct URL for Tailscale MSI file
           $tailscaleUrl = "https://github.com/tailscale/tailscale/releases/download/v1.30.0/tailscale-1.30.0-x64.msi"  # Correct URL for Windows MSI file
 
-          # Download the installer from GitHub
+          # Download the installer using curl
           Write-Host "Downloading Tailscale installer from GitHub: $tailscaleUrl"
-          Invoke-WebRequest -Uri $tailscaleUrl -OutFile $installerPath -ErrorAction Stop
+          curl -L $tailscaleUrl -o $installerPath
 
           # Verify the installer download (check if the file is not empty or corrupted)
           if ((Get-Item $installerPath).length -eq 0) {
