--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,13 +68,13 @@ jobs:
           if (Test-Path $tailscalePath) {
             Write-Host "Tailscale found at $tailscalePath"
           } else {
-            Write-Host "Tailscale not found at the default path."
+            Write-Host "Tailscale not found at the default path. Trying 'where tailscale'."
             # Use 'where tailscale' to find the correct path
             $tailscalePath = (where tailscale).Trim()
 
             # If tailscale is not found, stop the process
             if (-Not $tailscalePath) {
-              Write-Host "Tailscale executable not found, exiting..."
+              Write-Host "Tailscale executable not found anywhere, exiting..."
               exit 1
             } else {
               Write-Host "Tailscale found at: $tailscalePath"
